recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: not found: value level
	if(level == 0){
           ^Koch:17: error: not found: value level
		snowSide(level-1, length/3);
                         ^Koch:19: error: not found: value level
		snowSide(level-1, length/3);
                         ^Koch:21: error: not found: value level
		snowSide(level-1, length/3);
                         ^Koch:23: error: not found: value level
		snowSide(level-1, length/3);
                         ^